# VJ

./: .gitattributes  .gitignore  CMakeLists.txt  MakefileWindows  all.sh  compile_commands.json  config.lua  dist.sh  example.cpp  main.cpp  music.license
blend/robot/: robot.mtl
blend/textures/: Spaceship-Parts.xcf  regions.json
internal_assets/programs/: blend.fs  blend.vs  cubemap.frag  cubemap.vert  error.fs  error.vs  forward_pbr.fs  gauss.fs  grid.fs  instanced.vs  pbr.fs  pbr_pass.fs  regular.vs  select_pass.fs  textured.fs  zdebug.fs
internal_assets/programs/misc/: probe.fs
joc2d/data/: cam.txt  enemies.txt  guy.txt  jumper.txt  shooter.txt  turret.txt
joc2d/levels/: Level1-2.txt  Level1-3.txt  Level1-4.txt  empty.txt  level01.txt  level01_1.txt  level01_2.txt  level01_bak.txt  level02.txt  level03.txt
joc2d/materials/: fog.mat
joc2d/programs/: blend.fs  blend2d.fs  dynamic_tiled.fs  floor.fs  fog.fs  font.fs  font.vs  force.fs  force.vs  light.fs  parallax.fs  parallax.vs  shot.fs  tiled.fs  tiled.vs  tiled_map.vs  tiled_shadow_generator.fs  tiled_shadows.fs  tiled_shadows.vs
joc_src/: #tile.cpp#  application.cpp  application.hpp  atlas.cpp  atlas.hpp  editor.cpp  font.cpp  font.hpp  globals.cpp  globals.hpp  main.cpp  parallax.cpp  parallax.hpp  playerCamera.cpp  playerCamera.hpp  ship.cpp  ship.hpp  tile.cpp  tile.hpp  tile_editor.cpp
joc_src/entity/: #shot.cpp#  collectable.cpp  collectable.hpp  entity.cpp  entity.hpp  forceShot.cpp  forceShot.hpp  player.cpp  player.hpp  shot.cpp  shot.hpp  turret.cpp  turret.hpp
joc_src/entity/enemies/: base.cpp  base.hpp  finalboss.cpp  finalboss.hpp  grenade_guy.cpp  grenade_guy.hpp  turret.cpp  turret.hpp
lib/: fileWatcher
lib/freealut/: CMakeLists.txt  config.h  test_errorstuff  test_fileloader  test_memoryloader  test_version  test_waveforms
lib/freealut/al/: alconvolve  alffplay  alhrtf  allatency  alloopback  almultireverb  alplay  alrecord  alreverb  alsoft-config  alstream  alstreamcb  altonegen  openal-info  uhjdecoder  uhjencoder
lib/freealut/al/utils/alsoft-config/: moc_mainwindow.cpp_parameters  ui_mainwindow.h
lib/freealut/examples/: hello_world  playfile
lib/freealut/src/: CMakeLists.txt  alutInputStream.c  libalut.so.0
lib/geoc/: geoc.cpp  geoc.hpp  graph.hpp  linear.hpp
lib/glew/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/glfw/docs/latex/: build_guide.tex  compat_guide.tex  compile_guide.tex  context_guide.tex  index.tex  input_guide.tex  internals_guide.tex  intro_guide.tex  md_CONTRIBUTING.tex  md_SUPPORT.tex  monitor_guide.tex  moving_guide.tex  news.tex  quick_guide.tex  refman.tex  vulkan_guide.tex  window_guide.tex
lib/glfw/examples/: triangle-opengles
lib/glfw/tests/: allocator
lib/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake  imconfig.h  imgui.project  imgui_impl_opengl3.cpp
lib/imgui2/: imgui.h
lib/imguiText/: CMakeLists.txt  Makefile  TextEditor.cpp  TextEditor.h  cmake_install.cmake  imguiText.project
lib/lightmapper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lightmapper.cpp  lightmapper.hpp
lib/ogg/: CMakeLists.txt  ogg.hpp
lib/openal-soft/: alconvolve  alffplay  alhrtf  allatency  alloopback  almultireverb  alplay  alrecord  alreverb  alsoft-config  alstream  alstreamcb  altonegen  config.h  openal-info  uhjdecoder  uhjencoder
lib/openal-soft/utils/alsoft-config/: moc_mainwindow.cpp  moc_mainwindow.cpp_parameters
lib/stbimage/: CMakeLists.txt  Makefile  cmake_install.cmake  stbimage.project
lib/tinywav/: CMakeLists.txt  wav.cpp  wav.hpp
lib/xatlas/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  xatlas.cpp  xatlas.hpp
machine/objects/: OBJ_2009.mtl
src/: #shambhala.cpp#  engine.cpp  engine.hpp  ext.cpp  ext.hpp  io.hpp  resource.cpp  shambhala.cpp  shambhala.hpp  simple_set.hpp  simple_vector.hpp  standard.hpp  util.cpp  viewport.hpp
src/adapters/: audio.hpp  io.cpp  io.hpp  log.cpp  log.hpp  serialize.hpp  video.cpp  video.hpp  viewport.cpp  viewport.hpp
src/component/: a.out  base.hpp  buffer.cpp  buffer.hpp  component.hpp  framebuffer.hpp  logicHook.hpp  material.hpp  mesh.cpp  mesh.hpp  node.hpp  program.hpp  spriteBatch.cpp  spriteBatch.hpp  texture.hpp  vertexPool.cpp  vertexPool.hpp
src/component/engine/: a.out  fontBatch.cpp  fontBatch.hpp  spriteBatch.cpp  spriteBatch.hpp  vertexPool.cpp  vertexPool.hpp
src/component/video/: buffer.hpp  framebuffer.cpp  framebuffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.hpp  node.cpp  node.hpp  program.hpp  renderCamera.hpp  renderHook.hpp  renderTarget.hpp  texture.hpp
src/component/video/engine/: fontBatch.hpp  spriteBatch.hpp
src/controllers/: io.hpp  viewport.hpp
src/core/: component.hpp  core.cpp  core.hpp  math.hpp  resource.cpp  resource.hpp  stdext.hpp
src/device/: shambhala_audio.cpp  shambhala_audio.hpp
src/ext/: editor.cpp  editor.hpp  gi.cpp  gi.hpp  math.cpp  math.hpp  rendercamera.cpp  rendercamera.hpp  resource.cpp  resource.hpp  scene.cpp  scene.hpp  util.cpp  util.hpp  uv.cpp  uv.hpp  worldmat.cpp  worldmat.hpp
src/impl/: audio_openal.cpp  audio_openal.hpp  io_linux.cpp  io_linux.hpp  io_std.cpp  io_std.hpp  logger.cpp  logger.hpp  serialize.cpp  serialize.hpp  video_gl.cpp  video_gl.hpp  viewport_glfw.cpp  viewport_glfw.hpp  viewport_glut.cpp  viewport_glut.hpp
src/misc/: debug.hpp  gl.hpp  glfw.hpp
src/modules/: resource.cpp  resource.hpp
vs/: CMakeLists.txt  CMakeLists2.txt
vs/lib/: CMakeLists.txt
