cmake_minimum_required(VERSION 3.22)
project(Shambhala)
file(GLOB_RECURSE SRC src/*.cpp src/*.hpp)
include_directories(src)
include_directories(lib)
include_directories(lib/imgui)
include_directories(include)
add_library(shambhala ${SRC})
add_subdirectory(lib/imgui)
add_subdirectory(lib/imguiText)
add_subdirectory(lib/stbimage)
add_subdirectory(lib/lightmapper)
add_subdirectory(lib/xatlas)
target_include_directories(shambhala PRIVATE include src)
target_link_libraries(shambhala imgui imguiText stbimage file_watcher lightmapper xatlas)
add_executable(main main.cpp)
target_link_libraries(main shambhala stbimage GL GLEW glfw assimp)

file(GLOB_RECURSE JOC joc_src/*.cpp joc_src/*.hpp)
add_executable(joc ${JOC})
target_link_libraries(joc shambhala stbimage GL GLEW glfw assimp)

set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -DDEBUG" )
set(CMAKE_CXX_STANDARD 17)
