cmake_minimum_required(VERSION 3.20)
project(Shambhala)
file(GLOB_RECURSE SRC src/*.cpp src/*.hpp)
include_directories(src)
include_directories(lib)
include_directories(lib/imgui)
include_directories(include)
add_library(shambhala ${SRC})
add_subdirectory(lib/imgui)
add_subdirectory(lib/imguiText)
add_subdirectory(lib/stbimage)
add_subdirectory(lib/lightmapper)
add_subdirectory(lib/xatlas)
add_subdirectory(lib/glfw)
add_subdirectory(lib/freealut)
add_subdirectory(lib/glew)
add_subdirectory(lib/openal-soft)
target_include_directories(shambhala PRIVATE include src)
target_link_libraries(shambhala imgui imguiText stbimage lightmapper xatlas glfw glew alut openal)
# add_executable(main main.cpp)
# target_link_libraries(main shambhala stbimage GL GLEW glfw assimp)

file(GLOB_RECURSE JOC joc_src/*.cpp joc_src/*.hpp)

add_executable(joc ${JOC})
target_compile_definitions(joc PUBLIC GLFW)
target_compile_definitions(joc PUBLIC EDITOR)
target_compile_definitions(joc PUBLIC DEBUGCAMERA)
target_link_libraries(joc shambhala GL)

add_executable(joc_final ${JOC})
target_compile_definitions(joc_final PUBLIC GLFW)
target_link_libraries(joc_final shambhala GL)

set(CMAKE_CXX_FLAGS "-O0 -g -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3" )
set(CMAKE_CXX_STANDARD 17)
